# Specter

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  Specter.code-workspace  vcpkg.json
cmake/modules/: max_warnings.cmake
src/: CMakeLists.txt  elf_file.cpp  elf_file.hpp  main.cpp  specter_rec.cpp
src/arch/: CMakeLists.txt  arch.cpp  arch.hpp
src/arch/rv64/: alu.cpp  alu.hpp  decoder.cpp  decoder.hpp  formatter.cpp  formatter.hpp  ir.cpp  ir.hpp  regfile.cpp  regfile.hpp  rv64.cpp  rv64.hpp
src/execution/: CMakeLists.txt  elf_file.cpp  elf_file.hpp  executor.cpp  executor.hpp  rv64_executor.cpp  rv64_executor.hpp
src/memory/: CMakeLists.txt  elf_program_memory.cpp  elf_program_memory.hpp  growable_memory.cpp  growable_memory.hpp  memory.cpp  memory.hpp  memory_backed_memory.cpp  memory_backed_memory.hpp  stack_memory.cpp  stack_memory.hpp  virtual_memory.cpp  virtual_memory.hpp  vmem.cpp  vmem.hpp
src/recompilation/: CMakeLists.txt  ir.cpp  ir.hpp
src/util/: CMakeLists.txt  aligned_memory.hpp  elf_file.cpp  elf_file.hpp  formatting.hpp  mapped_file.cpp  mapped_file.hpp
tests/: CMakeLists.txt  Makefile  depends.py
tests/rv64/: Makefile  _exit.s  basic.c  main.c  minimal.s
tests/rv64/micro/: .gitignore  Makefile  add.s  add.toml  addi.s  addi.toml  addiw.s  addiw.toml  addw.s  addw.toml  and.s  and.toml  andi.s  andi.toml  auipc.s  auipc.toml  beq.s  beq.toml  bge.s  bge.toml  bgeu.s  bgeu.toml  blt.s  blt.toml  bltu.s  bltu.toml  bne.s  bne.toml  c.add.s  c.add.toml  c.addi.s  c.addi.toml  c.addi16sp.s  c.addi16sp.toml  c.addi4spn.s  c.addi4spn.toml  c.addiw.s  c.addiw.toml  c.addw.s  c.addw.toml  (+88 more)
tests/src/: basic.c
